# backend/openapi/openapi.json
@@ -469,6 +469,28 @@
             "title": "Stage Item Input1 Score",
             "type": "integer"
           },
+          "stage_item_input1_score_after_extra_time": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input1 Score After Extra Time"
+          },
+          "stage_item_input1_score_extra_time_half": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input1 Score Extra Time Half"
+          },
           "stage_item_input1_score_half_time": {
             "anyOf": [
               {
@@ -479,6 +501,17 @@
               }
             ],
             "title": "Stage Item Input1 Score Half Time"
+          },
+          "stage_item_input1_score_penalties": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input1 Score Penalties"
           },
           "stage_item_input1_winner_from_match_id": {
             "anyOf": [
@@ -527,6 +560,28 @@
             "title": "Stage Item Input2 Score",
             "type": "integer"
           },
+          "stage_item_input2_score_after_extra_time": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input2 Score After Extra Time"
+          },
+          "stage_item_input2_score_extra_time_half": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input2 Score Extra Time Half"
+          },
           "stage_item_input2_score_half_time": {
             "anyOf": [
               {
@@ -537,6 +592,17 @@
               }
             ],
             "title": "Stage Item Input2 Score Half Time"
+          },
+          "stage_item_input2_score_penalties": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input2 Score Penalties"
           },
           "stage_item_input2_winner_from_match_id": {
             "anyOf": [
@@ -575,6 +641,12 @@
           "stage_item_input2_score",
           "stage_item_input1_score_half_time",
           "stage_item_input2_score_half_time",
+          "stage_item_input1_score_extra_time_half",
+          "stage_item_input2_score_extra_time_half",
+          "stage_item_input1_score_after_extra_time",
+          "stage_item_input2_score_after_extra_time",
+          "stage_item_input1_score_penalties",
+          "stage_item_input2_score_penalties",
           "is_played",
           "court_id",
           "stage_item_input1_conflict",
@@ -639,6 +711,28 @@
             "title": "Stage Item Input1 Score",
             "type": "integer"
           },
+          "stage_item_input1_score_after_extra_time": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input1 Score After Extra Time"
+          },
+          "stage_item_input1_score_extra_time_half": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input1 Score Extra Time Half"
+          },
           "stage_item_input1_score_half_time": {
             "anyOf": [
               {
@@ -650,10 +744,43 @@
             ],
             "title": "Stage Item Input1 Score Half Time"
           },
+          "stage_item_input1_score_penalties": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input1 Score Penalties"
+          },
           "stage_item_input2_score": {
             "default": 0,
             "title": "Stage Item Input2 Score",
             "type": "integer"
+          },
+          "stage_item_input2_score_after_extra_time": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input2 Score After Extra Time"
+          },
+          "stage_item_input2_score_extra_time_half": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input2 Score Extra Time Half"
           },
           "stage_item_input2_score_half_time": {
             "anyOf": [
@@ -665,6 +792,17 @@
               }
             ],
             "title": "Stage Item Input2 Score Half Time"
+          },
+          "stage_item_input2_score_penalties": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input2 Score Penalties"
           }
         },
         "required": [
@@ -673,6 +811,12 @@
           "stage_item_input2_score",
           "stage_item_input1_score_half_time",
           "stage_item_input2_score_half_time",
+          "stage_item_input1_score_extra_time_half",
+          "stage_item_input2_score_extra_time_half",
+          "stage_item_input1_score_after_extra_time",
+          "stage_item_input2_score_after_extra_time",
+          "stage_item_input1_score_penalties",
+          "stage_item_input2_score_penalties",
           "is_played",
           "court_id",
           "custom_duration_minutes",
@@ -994,6 +1138,28 @@
             "title": "Stage Item Input1 Score",
             "type": "integer"
           },
+          "stage_item_input1_score_after_extra_time": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input1 Score After Extra Time"
+          },
+          "stage_item_input1_score_extra_time_half": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input1 Score Extra Time Half"
+          },
           "stage_item_input1_score_half_time": {
             "anyOf": [
               {
@@ -1004,6 +1170,17 @@
               }
             ],
             "title": "Stage Item Input1 Score Half Time"
+          },
+          "stage_item_input1_score_penalties": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input1 Score Penalties"
           },
           "stage_item_input1_winner_from_match_id": {
             "anyOf": [
@@ -1052,6 +1229,28 @@
             "title": "Stage Item Input2 Score",
             "type": "integer"
           },
+          "stage_item_input2_score_after_extra_time": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input2 Score After Extra Time"
+          },
+          "stage_item_input2_score_extra_time_half": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input2 Score Extra Time Half"
+          },
           "stage_item_input2_score_half_time": {
             "anyOf": [
               {
@@ -1062,6 +1261,17 @@
               }
             ],
             "title": "Stage Item Input2 Score Half Time"
+          },
+          "stage_item_input2_score_penalties": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input2 Score Penalties"
           },
           "stage_item_input2_winner_from_match_id": {
             "anyOf": [
@@ -1100,6 +1310,12 @@
           "stage_item_input2_score",
           "stage_item_input1_score_half_time",
           "stage_item_input2_score_half_time",
+          "stage_item_input1_score_extra_time_half",
+          "stage_item_input2_score_extra_time_half",
+          "stage_item_input1_score_after_extra_time",
+          "stage_item_input2_score_after_extra_time",
+          "stage_item_input1_score_penalties",
+          "stage_item_input2_score_penalties",
           "is_played",
           "court_id",
           "stage_item_input1_conflict",
@@ -1231,6 +1447,28 @@
             "title": "Stage Item Input1 Score",
             "type": "integer"
           },
+          "stage_item_input1_score_after_extra_time": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input1 Score After Extra Time"
+          },
+          "stage_item_input1_score_extra_time_half": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input1 Score Extra Time Half"
+          },
           "stage_item_input1_score_half_time": {
             "anyOf": [
               {
@@ -1241,6 +1479,17 @@
               }
             ],
             "title": "Stage Item Input1 Score Half Time"
+          },
+          "stage_item_input1_score_penalties": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input1 Score Penalties"
           },
           "stage_item_input1_winner_from_match_id": {
             "anyOf": [
@@ -1286,6 +1535,28 @@
             "title": "Stage Item Input2 Score",
             "type": "integer"
           },
+          "stage_item_input2_score_after_extra_time": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input2 Score After Extra Time"
+          },
+          "stage_item_input2_score_extra_time_half": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input2 Score Extra Time Half"
+          },
           "stage_item_input2_score_half_time": {
             "anyOf": [
               {
@@ -1296,6 +1567,17 @@
               }
             ],
             "title": "Stage Item Input2 Score Half Time"
+          },
+          "stage_item_input2_score_penalties": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage Item Input2 Score Penalties"
           },
           "stage_item_input2_winner_from_match_id": {
             "anyOf": [
@@ -1334,6 +1616,12 @@
           "stage_item_input2_score",
           "stage_item_input1_score_half_time",
           "stage_item_input2_score_half_time",
+          "stage_item_input1_score_extra_time_half",
+          "stage_item_input2_score_extra_time_half",
+          "stage_item_input1_score_after_extra_time",
+          "stage_item_input2_score_after_extra_time",
+          "stage_item_input1_score_penalties",
+          "stage_item_input2_score_penalties",
           "is_played",
           "court_id",
           "stage_item_input1_conflict",
